# Alloy-Agent

./: .gitignore  Dockerfile  README.md  calendar_workers.py  config.ini  date_worker.py  docker-compose.yml  email_workers.py  orchestrator.py  prompts.py  pyproject.toml  requirements.txt  schemas.py  utils.py
agent_workflow/: calendar_workers.py  database.py  date_worker.py  discord_bot.py  email_workers.py  orchestrator.py  prompts.py  schemas.py
config/: config.py
testing/: bot_test.py  orhestrator_test.py
